# scuffedcraft

./: .gitignore  .gitmodules  CMakeLists.txt  copy-assets.cmake
include/: input.h  window.h
include/glad/: glad.h
include/render/: camera.h  chunk_renderer.h  primitives.h  shader.h  shader_locations.h  shape.h  texture.h  texture_locations.h  texture_manager.h
include/world/: block.h  chunk.h  chunk_generator.h  position.h
shaders/: vertex.glsl
src/: glad.c  input.cpp  main.cpp  window.cpp
src/render/: camera.cpp  chunk_renderer.cpp  primitives.cpp  shader.cpp  shape.cpp  texture.cpp  texture_manager.cpp
src/world/: block.cpp  chunk.cpp  chunk_generator.cpp  position.cpp
